# hl2-trainer

./: Cargo.toml  README.md
src/: backend.rs  main.rs  timing.rs
ui/: appwindow.slint
