[package]
name = "hl2-trainer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
proc_mem = "0.1.6"
tokio = {version = "1.13", features = ["rt", "rt-multi-thread", "time"]}
webbrowser = "1.0.1"
[build-dependencies]
slint-build = "1.7.2"